# timesheetconv

./: README.md  pyproject.toml  run.bat
notebooks/: timesheetconv.ipynb
src/timesheetconv/: main.py
src/timesheetconv/templates/: index.html
